Fixed navigation popover being misaligned on the last element

--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -313,15 +313,15 @@
 }
 
 //popover styles
-.app-content-main-bottom-center .icon-nav-wrap {
-	.popover-title {
-		text-transform: uppercase;
-		border-bottom: 1px solid #FFF;
-	}
-	.popover {
-		border: 0;
-		border-radius: 0px;
-	}
+.popover-title {
+	text-transform: uppercase;
+	border-bottom: 1px solid #FFF;
+}
+.popover {
+	border: 0;
+	border-radius: 0px;
+	margin-top: -4px !important;
+
 	* {
 		font-size: 9px;
 		color: #FFF;
